# Vaulter

./: README.md  package.json
.serena/: project.yml
backend/: .gitignore  AGENTS.md  check_db.py  pyproject.toml
backend/app/: auth.py  config.py  default_classifications.json  main.py  socketio_server.py
backend/app/db/: client.py  models.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  classifications.py  deals.py  processing.py  search.py  upload.py  webhooks.py
backend/app/services/: chat_engine.py  deal_insights.py  document_classifier.py  duplicate_detection.py  embeddings.py  gemini_processor.py  lease_linker.py  risk_rationale.py  storage.py  text_extractor.py
backend/migrations/: env.py
backend/migrations/versions/: 38d11cca0a66_initial_schema.py  a1b2c3d4e5f6_add_document_processing_flags.py  b2c3d4e5f6a7_deals_skipped_files.py  c3d4e5f6a7b8_add_companies_and_classifications.py  d4e5f6a7b8c9_gemini_processing_columns.py  e5f6a7b8c9d0_document_processing_status.py  f6a7b8c9d0e1_document_processing_error.py  g7h8i9j0k1l2_document_is_empty.py  h8i9j0k1l2m3_documents_unique_path.py  i9j0k1l2m3n4_document_chunks_and_metadata.py  j0k1l2m3n4o5_chat_sessions_and_messages.py  k1l2m3n4o5p6_duplicate_similarity_score.py  l2m3n4o5p6q7_add_detecting_hash_duplicates_stage.py  m1n2o3p4q5r6_add_description_to_deals.py  n2o3p4q5r6s7_add_documents_category_index.py  o1p2q3r4s5t6_add_insights_cache_to_deals.py  p2q3r4s5t6u7_add_ai_rationale_to_deals.py
frontend/: .env.local  .gitignore  AGENTS.md  next.config.ts  package-lock.json  package.json  (+1 more)
(+98 files in other folders)
